[metadata]
name = janus
summary = janus - A restful port reservation microservice.
description-file = README.rst
author = John Dewey
author-email = john@dewey.ws
home-page = https://github.com/ansible-fusion/janus
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    janus = janus.shell:main

[files]
packages =
    janus

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
